# rust-follow-redirects

./: .travis.yml  Cargo.toml  README.md
src/: buffer.rs  error.rs  future.rs  lib.rs  machine.rs  uri.rs
tests/: integration.rs
