[package]
name = "follow-redirects"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Extension for `hyper` to follow HTTP redirects"
license = "MIT"
repository = "https://github.com/srijs/rust-follow-redirects"
documentation = "https://docs.rs/follow-redirects"
keywords = ["hyper", "redirect", "follow", "location"]

[dependencies]
bytes = "0.4.6"
futures = "0.1.21"
http = "0.1.5"
hyper = "0.11.24"

[dev-dependencies]
tokio-core = "0.1.16"
