[package]
name = "follow-redirects"
version = "0.2.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Extension for hyper to follow HTTP redirects"
readme = "README.md"
license = "MIT"
repository = "https://github.com/srijs/rust-follow-redirects"
documentation = "https://docs.rs/follow-redirects"
keywords = ["hyper", "http", "redirect", "follow", "location"]
edition = "2018"

[dependencies]
bytes = "1.0.1"
hyper = { version = "0.14.4", features = [ "client", "http1", "http2" ] }

[dev-dependencies]
tokio = { version = "1", features = [ "rt-multi-thread" ] }
hyper = { version = "0.14.4", features = [ "full" ] }
